split status into separate apps - cleanup resources display

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about">About</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item pyff-api hide"><a class="nav-link" href="/status">Status</a></li>
+                    <li class="nav-item pyff-api hide"><a class="nav-link" href="/resources">Resources</a></li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0" id="searchform" action="/list/" method="GET">
                     <input type="text"
